--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +16,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap');
+
+:root {
+  --bg: #D2D3D3;
+  --heading: #2D3032;
+  --subheading: #555759;
+  --text: #7D7F80;
+  --headline: ;
+  --font-heading: 'Open Sans', sans-serif;
+  --font-subheading: 'Poppins', sans-serif;
+  --font-text: 'Oxygen', sans-serif;
 }
